--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -331,6 +331,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="pages\dockWindow\documents\FeatureSearchHandler.vb" />
+    <Compile Include="pages\dockWindow\explorer\frmSRMIonsExplorer.Designer.vb">
+      <DependentUpon>frmSRMIonsExplorer.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\explorer\frmSRMIonsExplorer.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="pages\dockWindow\explorer\frmUVScans.Designer.vb">
       <DependentUpon>frmUVScans.vb</DependentUpon>
     </Compile>
@@ -592,6 +598,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\explorer\frmRawFeaturesList.resx">
       <DependentUpon>frmRawFeaturesList.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\dockWindow\explorer\frmSRMIonsExplorer.resx">
+      <DependentUpon>frmSRMIonsExplorer.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\explorer\frmTreeExplorer.resx">
       <DependentUpon>frmTreeExplorer.vb</DependentUpon>
