--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -268,6 +268,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="application\ApplicationEvents.vb" />
+    <Compile Include="application\VisualStudio.vb" />
     <Compile Include="application\RPackage.vb" />
     <Compile Include="forms\frmTweaks\frmMsImagingTweaks.Designer.vb">
       <DependentUpon>frmMsImagingTweaks.vb</DependentUpon>
