--- a/src/metadb/Massbank/Massbank.vbproj
+++ b/src/metadb/Massbank/Massbank.vbproj
@@ -425,6 +425,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MetaLib\Models\Class1.vb" />
     <Compile Include="Public\lipidMAPS\MetaTable.vb" />
     <Compile Include="Public\NCBI\PubChemDescriptorRepo.vb" />
     <Compile Include="SDFExtensions.vb" />
